# AnyNote

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.md  PLAN.md  README.md  agent.md  anynote.code-workspace  cl1.md  cl2.md  cl3.md  cl4.md  cl5.md  cl6.md  cl7.md  cl8.md  cl9.md  compose.ci.yml  compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  sonar-project.properties  turbo.json
apps/agents/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  agents_migrations_env.py  alembic.ini  cli  package.json  pyproject.toml  pytest.ini  requests.http
apps/agents/agents/: bootstrap.py  exceptions.py  main.py  router.py  settings.py
apps/agents/agents/apps/: __init__.py
apps/agents/agents/apps/agent/: depends.py  enums.py  enums_shared.py  errors.py  errors_shared.py  events.py  guards.py  router.py  schemas.py  utils.py
apps/agents/agents/apps/chat/: __init__.py  depends.py  enums.py  errors.py  router.py  schemas.py  utils.py
apps/agents/agents/apps/processing/: depends.py  errors.py  router.py  schemas.py  utils.py
apps/agents/agents/apps/search/: router.py  schemas.py
apps/agents/agents/apps/transcription/: depends.py  router.py  schemas.py
apps/agents/agents/apps/validation/: router.py
apps/agents/agents/cli/: __init__.py  app.py  bootstrap.py
apps/agents/agents/cli/commands/: health.py
apps/agents/agents/cmd/: __init__.py  rest.py
apps/agents/agents/core/: depends.py
apps/agents/agents/di/: providers.py
apps/agents/agents/entrypoints/rest/: auth.py  generate.py  health.py  router.py
apps/agents/agents/prompts/: default.j2
apps/agents/agents/schemas/: generate.py  streaming.py
apps/agents/agents/services/: graph.py  mcp_tools.py  prompt_renderer.py  providers.py
apps/agents/migrations/: README  env.py
apps/agents/tests/: conftest.py  test_alembic_env.py  test_auth.py  test_bootstrap.py  test_cli.py  test_cmd_rest.py  test_exceptions.py  test_generate_ollama.py  test_generate_schema.py  test_graph.py  test_graph_streaming_plan_steps.py  test_graph_streaming_tokens.py  test_graph_streaming_tool_status.py  test_health.py  test_prompt_renderer.py  test_providers.py  test_scripts.py  test_settings.py  test_streaming_schema.py
apps/agents/tests/apps/agent/: factories.py  test_action_log.py  test_events.py  test_executor_confirmation.py  test_extract_reasoning.py  test_graph_assembly.py  test_history_compactor.py  test_internal_tools.py  test_jinja_renderer.py  test_jwt_verify.py  test_mcp_client.py  test_mcp_workspace_injection.py  test_model_factory.py  test_model_factory_reasoning.py  test_node_critic.py  test_node_executor.py  test_node_memory_writer.py  test_node_planner.py  test_node_router.py  test_node_tool_runner.py  test_thinking_stream.py  test_tool_registry.py  test_use_case_resume_agent.py  test_use_case_run_agent.py  test_validate_provider.py  test_verify_service_token.py
apps/agents/tests/apps/chat/: test_errors.py  test_generate_stream.py  test_graph_service.py  test_retrieval_integration.py  test_router.py  test_schemas.py
apps/agents/tests/apps/processing/: test_chunker.py  test_collection_name.py  test_delete_endpoints.py  test_embedding_factory.py  test_normalize_text_use_case.py  test_normalizer.py  test_normalizer_service.py  test_validate_embedding.py  test_vector_store_repository.py  test_vector_store_threshold.py  test_vectorization_integration.py  test_vectorization_repository.py  test_vectorize_page.py
apps/agents/tests/apps/search/: test_router.py
apps/agents/tests/apps/transcription/: test_transcription.py
apps/agents/tests/apps/validation/: test_validation_routes.py
apps/agents/tests/chat/: test_generate_stream_use_case.py  test_graph_service.py  test_mcp_tools.py  test_model_factory.py  test_prompt_renderer.py  test_router.py  test_schemas.py
apps/agents/tests/integration/: conftest.py  test_confirmation_pause_resume.py  test_graph_full_run.py
apps/agents/tests/processing/: test_depends.py  test_language_detector.py  test_normalizer.py  test_router.py
apps/engines/: .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  eslint.config.js  jest.config.ts  jest.integration.config.ts  jest.setup.cjs  package.json  pyproject.toml  requests.http  tsconfig.json
apps/engines/engines/: exceptions.py  main.py  settings.py
apps/engines/engines/di/: providers.py
apps/engines/engines/services/: embeddings.py  page_repo.py  search.py
apps/engines/engines/tools/: registry.py
apps/engines/src/: app.module.ts  cli.module.ts  cli.ts  instrument.ts  main.ts  runtime-imports.spec.ts
apps/engines/src/apps/api/: api.module.ts
apps/engines/src/apps/billing/: billing.module.ts
apps/engines/src/apps/cleanup/: cleanup.module.ts  cleanup.service.spec.ts  cleanup.service.ts
apps/engines/src/apps/history/: history-prune.service.spec.ts  history-prune.service.ts  history.module.ts
apps/engines/src/apps/indexer/: indexer.controller.ts  indexer.module.ts  playwright.guard.ts
apps/engines/src/apps/mailer/: mailer.module.ts
apps/engines/src/auth/: agents-internal-auth.guard.spec.ts  agents-internal-auth.guard.ts  auth.module.ts
apps/engines/src/cli/: backfill-reindex.ts
apps/engines/src/health/: health.controller.spec.ts  health.controller.ts  health.module.ts
apps/engines/test/integration/: indexing.e2e.spec.ts  kanban-domain.e2e.spec.ts  mcp.e2e.spec.ts  pages-domain.e2e.spec.ts  reminders-domain.e2e.spec.ts  search.e2e.spec.ts
apps/engines/tests/: conftest.py  test_page_repo.py  test_settings.py
apps/indexer/: Dockerfile  Makefile  README.md  package.json  pyproject.toml
apps/indexer/indexer/: exceptions.py  main.py  settings.py
apps/indexer/indexer/di/: providers.py
apps/indexer/indexer/services/: chunker.py  handlers.py  outbox.py  qdrant_writer.py  worker.py
apps/indexer/tests/: conftest.py  test_chunker.py  test_di_container.py  test_embeddings_factory.py  test_health.py  test_pipeline_end_to_end.py  test_settings.py  test_worker_tick.py
(+1526 files in other folders)
