[project]
name = "agents"
version = "0.1.0"
description = "AnyNote agents service — FastAPI + LangGraph LLM pipeline"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116",
    "fast-clean>=1.6.0",
    "uvicorn[standard]>=0.30",
    "typer>=0.24.1",
    "alembic>=1.18.4",
    "dishka>=1.10.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.2",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.14",
    "langchain-gigachat>=0.5.0",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-postgres>=3.0.5",
    "asyncpg>=0.31.0",
    "jinja2>=3.1.6",
    "sse-starlette>=3.3.4",
    "psycopg[binary]>=3.3.3",
    "spacy>=3.8.14",
    "langdetect>=1.0.9",
]

[dependency-groups]
dev = [
    "docformatter>=1.7.7",
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "pytest-httpx>=0.36.2",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.11",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: integration tests that require live services",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]


[tool.ruff]
line-length = 120
target-version = "py312"

# exclude = ["jupyter_notebook_config.py"]
select = ["E", "F", "W", "I", "N", "B", "UP", "ASYNC", "RUF"]
ignore = ["E501"]


src = ["checker", "tests"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[tool.coverage.report]
omit = [
  'tests/*',
  'migrations/*'
]
